[package]
name = "algorithms-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
mockall = "0.13.0"
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.76", features = ["full"] }
decorator_macros = { path = "./decorator_macros" }
